[package]
name = "audible_split"
version = "0.1.0"
authors = ["Lukas Knuth <mr.luke.187@googlemail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
clap = "2.33.0"
rayon = "1.1.0"
log = "0.4.7"
simplelog = "0.6.0"
indicatif = "0.11.0"
strfmt = "0.1.6"